src/test/ui/borrowck/borrowck-block-unint.stderr
<<<<<<< HEAD   (086005 Importing rustc-1.38.0)
error[E0381]: borrow of possibly uninitialized variable: `x`
=======
error[E0381]: borrow of possibly-uninitialized variable: `x`
>>>>>>> BRANCH (8cd2c9 Importing rustc-1.39.0)
  --> $DIR/borrowck-block-unint.rs:4:11
   |
LL |     force(|| {
<<<<<<< HEAD   (086005 Importing rustc-1.38.0)
   |           ^^ use of possibly uninitialized `x`
=======
   |           ^^ use of possibly-uninitialized `x`
>>>>>>> BRANCH (8cd2c9 Importing rustc-1.39.0)
LL |         println!("{}", x);
   |                        - borrow occurs due to use in closure

error: aborting due to previous error

For more information about this error, try `rustc --explain E0381`.
